chore: update urls

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         label="English"
         kind="captions"
         srclang="en"
-        src="./en-cc.vtt"
+        src="https://castable-video.vercel.app/en-cc.vtt"
       />
     </video>
 
