feat!: name CastableVideo to CastableVideoElement
BREAKING CHANGE: for consistency with other Mux media elements

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <button onclick="window.castable.muted = true">Mute</button>
       <button onclick="window.castable.muted = false">Unmute</button>
       <button onclick="window.castable.requestCast()">Request Cast</button>
-      <button onclick="window.CastableVideo.exitCast()">Exit Cast</button>
+      <button onclick="window.CastableVideoElement.exitCast()">Exit Cast</button>
     </div>
 
     <script>
