--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         label="English"
         kind="captions"
         srclang="en"
-        src="./en-cc.vtt"
+        src="https://castable-video.vercel.app/en-cc.vtt"
       />
     </castable-video>
 
