--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <video
         poster="https://image.mux.com/O6LdRc0112FEJXH00bGsN9Q31yu5EIVHTgjTKRkKtEq1k/thumbnail.jpg?time=56"
         src="https://stream.mux.com/O6LdRc0112FEJXH00bGsN9Q31yu5EIVHTgjTKRkKtEq1k/high.mp4"
+        crossorigin
       ></video>
       <track
         default
