chore: tiny cleanup

--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
   <head>
     <title>Castable Video</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <style>
       body {
         min-height: 80%;
